# MeerKAT-correlator-upgrade-imaging-tests

./: .gitattributes  .gitignore  README.md  corr_imanalysis.py  image-analyser.py  image_analysis.py  pyproject.toml  srcfind.py
configs/: example2_local.yaml  example_cluster.yaml  example_local.yaml
legacy_scripts/: image-rotation.py  py3gokatsdpimager.py  set_pyenv_settings.py  stats.py
scripts/: flux_analysis.py  positions_analysis.py  pybdsf_srcfind.py  standalone_xxyy_solve.py  tclean_two_bands.py  vis_amp_analyze.py  xmatch_pybdsf.py
src/meerkat_corr_imaging/: __init__.py  cli.py  config.py
src/meerkat_corr_imaging/steps/: step1_archive_docs.py  step2_vis_analysis.py  step3_calibrate_image.py  step5_srcfind.py  step6_xmatch.py  step7_flux.py  step7_positions.py
src/meerkat_correlator_imaging_tests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
